# dac_assistant

./: Dockerfile  README.md  client_api.py  main.py  package-lock.json  play_ground.py  pyproject.toml  readme.md  requirements.txt  test.py  test_2.py  test_3_delete.py
UI/: chatbot.py
adhoc/: api_calls.py
api/: mcp_client.py  server_generator.py  server_management.py
generated_servers/: ai-apis_server.py  digital-content-apis_server.py  gateway-connection-apis_server.py  settings-apis_server.py  sso-apis_server.py  user-apis_server.py
sample_contract/: Finance_api.yaml  KYC.yaml  settings-apis.json
schemas/: authentication.py  dsh.py  servers.py
services/: authentication.py  mcp_client.py  server_generator.py  server_management.py
utils/: dsh_apis.py  utils.py
